--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ a {
 .container {
     display: flex;
     flex: 1;
+    flex-direction: column;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .quote {
@@ -77,6 +84,8 @@ a {
     display: flex;
     font-weight: bold;
     font-size: 36px;
+    background-color: #E5E7EB;
+    text-align: right;
 }
 
 .signup {
@@ -86,7 +95,7 @@ a {
 }
 
 .bottom {
-    display: flex;
+    
     background-color: #3882F6;
     color: white;
 }
