--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     height: 100vh;
     margin: 0px;
     font-family: Roboto, sans-serif;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     
@@ -12,13 +11,14 @@ body {
 .header, .footer, .hero {
     background-color: #1F2937;
     color: white;
+    padding: 20px 150px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     font-size: 24px;
-    padding: 16px;
+    height: 72px;
 }
 
 .footer {
@@ -62,13 +62,22 @@ a {
 .container {
     display: flex;
     flex: 1;
-    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+   padding: 20px 150px
+    
 }
 
 .info {
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    gap: 52px;
+    max-width: 200px;
     text-align: center;
+    
+    
+   
 }
 
 .quote {
@@ -77,6 +86,7 @@ a {
     color: #1f2937;
     font-style: italic;
     display: flex;
+    padding: 20px 150px 0px;
     font-weight: lighter;
 }
 
@@ -85,7 +95,8 @@ a {
     font-weight: bold;
     font-size: 36px;
     background-color: #E5E7EB;
-    text-align: right;
+    justify-content: flex-end;
+    padding: 0px 150px 20px;
 }
 
 .signup {
@@ -98,4 +109,5 @@ a {
     
     background-color: #3882F6;
     color: white;
+    padding: 20px 150px;
 }
